# inazugle-scraper

./: .gitignore  Cargo.toml  README.md  character_cache.sqlite  parser.py  scrap.py
src/: database.rs  lib.rs  main.rs  pages.rs  request.rs  utils.rs
src/pages/: characters_page.rs  settings_page.rs
src/request/: fetcher.rs
src/request/fetcher/: character_parser.rs  search_parser.rs
